--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,5 @@
-<div class="container">
-    <p>
-        profile works!
-      </p>
+<div class="container text-center">
+  <h1>Profile</h1>
+<h2>Hello</h2>
 </div>
 
