--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,6 @@
 <div class="container text-center">
   <h1>Profile</h1>
 <h2>Hello</h2>
+  <h2>{{displayString}}</h2> // Added for the display
 </div>
 
