--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="list-group" *ngFor="let main of arrays" [routerLink]="['/profile', 'main.id' ]">
+  <div class="list-group" *ngFor="let main of arrays" [routerLink]="['/profile', main.id ]">
       <a  class="list-group-item list-group-item-action">{{main.title}}</a>
   </div>
 </div>
