--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,8 @@
 <div class="container text-center">
   <h1>Profile</h1>
-<h2>Hello</h2>
+<h2>{{productData.title}}</h2>
+<div class="list-group"  >
+  <a  class="list-group-item list-group-item-action">{{productData.url}}</a>
+</div>
 </div>
 
